Header Spacing: Corrected header spacing before navigation

--- a/src/sass/theme.scss
+++ b/src/sass/theme.scss
@@ -76,7 +76,7 @@ header {
         padding-top: 10px;
     }
     .brand {
-        padding-bottom: 1em;
+        padding-bottom: 10px;
         a {
             max-width: 240px;
             height: auto;
